# luwiscript-src

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-cross.sh
.github/workflows/: build.yml  ci.yml  pre-commit.yml  release.yml
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
compiler/src/ast/: attribute.rs  expr.rs  literal.rs  map.rs  mod.rs  pattern.rs  serialize.rs  span.rs  stmt.rs  type.rs  visitor.rs
compiler/src/codegen/: bytecode.rs
compiler/src/diagnostics/: error.rs  report.rs
compiler/src/driver/: driver.rs  mod.rs
compiler/src/lexer/: lexer.rs  mod.rs  token.rs
compiler/src/parser/: parser.rs
compiler/src/typechecker/: checker.rs
docs/: propostas-novidades.md
examples/: features.lw  hello.lw  struct_demo.lw  test.lw
runtime/: Cargo.toml
runtime/src/: chunk.rs  lib.rs  scheduler.rs  stdlib.rs  value.rs  vm.rs  vm_test.rs
toolchain/fmt/: Cargo.toml
toolchain/fmt/src/: main.rs
toolchain/linter/: Cargo.toml
toolchain/linter/src/: main.rs
